# quotes_website_on_django

./: pyproject.toml
quotes/authorsapp/: models.py
quotes/authorsapp/templates/authorsapp/: addAuthor.html  base.html  index.html  urls.py  views.py
quotes/quotes/: settings.py  urls.py
quotes/quotesapp/: models.py
quotes/quotesapp/static/quotesapp/: style.css
quotes/quotesapp/templates/quotesapp/: addQuote.html  base.html  forms.py  index.html  urls.py  views.py
quotes/usersapp/: forms.py  urls.py  views.py
quotes/usersapp/templates/usersapp/: loginuser.html  signupuser.html  urls.py  views.py
quotes/utils/: authors.json  migration.py  quotes.json
