[tool.poetry]
name = "10- django"
version = "0.1.0"
description = ""
authors = ["baskina <katyabaskina@gmail.com>"]
readme = "README.md"
packages = [{include = "10"}]

[tool.poetry.dependencies]
python = ">=3.10"
django = "^5.0.4"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

